Alteração no fade img SobreNos

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         </div>
                         <h1 class="h1Nos"><a name="sobreNos">Conheça a <b>Haven Burger</b>!!</a></h1>
                         <div class="conteinerNos quemNosSomos mdNos">
-                            <img class="imgNos hiddenImg" src="imagens/fachad600a.jpg" alt="Haven-Burger">
+                            <img class="imgNos hiddenPrg" src="imagens/fachad600a.jpg" alt="Haven-Burger">
                             <div class="paragrafos hiddenPrg">
                                 <p>Bem-vindo ao <b>Haven Burger</b>, onde a paixão pela comida e o sabor <b>autêntico</b> se
                                     encontram!</p>
@@ -257,7 +257,7 @@
                             </div>
                         </div>
                         <div class="missaoVisaoValres mdNos">
-                            <img class="hiddenPrg hiddenImg" src="imagens/MissaoVisaoValores600.png" alt="">
+                            <img class="hiddenPrg hiddenPrg" src="imagens/MissaoVisaoValores600.png" alt="">
                             <div class="paragrafos">
                                 <p class="hiddenPrg"><b>Missão</b>: Proporcionar experiências gastronômicas únicas.
                                 </p>
@@ -266,7 +266,7 @@
                             </div>
                         </div>
                         <div class="nossaEquipe mdNos">
-                            <img class="imgNos hiddenImg" src="imagens/equipe600.jpg" alt="">
+                            <img class="imgNos hiddenPrg" src="imagens/equipe600.jpg" alt="">
                             <div class="paragrafos">
                                 <p class="hiddenPrg"><b>Nossa equipe</b> é apaixonada e dedicada!</p>
                                 <p class="hiddenPrg">Chefs e colaboradores <b>comprometidos</b> em entregar lanches <b>excepcionais</b>, verdadeiras <b>obras-primas culinárias</b>.</p>
