novo ajuste links navegacao

--- a/itens.html
+++ b/itens.html
@@ -40,8 +40,8 @@
                     <span class="line"></span>
                 </div>
                 <ul id="menuTp">
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Home</a>
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/itens" target="_blank">Sobre nós</a>
+                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/Index">Home</a>
+                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Sobre nós</a>
                     <a class="mnTp" href="#">Cardápio</a>
                     <a class="mnTp" href="#" onclick="abreCarrinho()">Carrinho</a>
 
