--- a/itens.html
+++ b/itens.html
@@ -40,7 +40,7 @@
                     <span class="line"></span>
                 </div>
                 <ul id="menuTp">
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/Index">Home</a>
+                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Home</a>
                     <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Sobre nós</a>
                     <a class="mnTp" href="#">Cardápio</a>
                     <a class="mnTp" href="#" onclick="abreCarrinho()">Carrinho</a>
