--- a/itens.html
+++ b/itens.html
@@ -41,7 +41,7 @@
                 </div>
                 <ul id="menuTp">
                     <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Home</a>
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Sobre nós</a>
+                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#sobreNos">Sobre nós</a>
                     <a class="mnTp" href="#">Cardápio</a>
                     <a class="mnTp" href="#" onclick="abreCarrinho()">Carrinho</a>
 
