--- a/itens.html
+++ b/itens.html
@@ -40,8 +40,8 @@
                     <span class="line"></span>
                 </div>
                 <ul id="menuTp">
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#">Home</a>
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/#sobreNos">Sobre nós</a>
+                    <a class="mnTp" href="http://127.0.0.1:5500/index.html">Home</a>
+                    <a class="mnTp" href="http://127.0.0.1:5500/index.html" target="_blank">Sobre nós</a>
                     <a class="mnTp" href="#">Cardápio</a>
                     <a class="mnTp" href="#" onclick="abreCarrinho()">Carrinho</a>
 
