Ajuste de navegacao(Hlinks)

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <span class="line"></span>
                 </div>
                 <ul id="menuTp">
-                    <a class="mnTp" href="http://127.0.0.1:5500/index.html">Home</a>
+                    <a class="mnTp" href="#">Home</a>
                     <a class="mnTp" onclick="sobreNos()" href="#sobreNos" target="_self" >Sobre nós</a>
-                    <a class="mnTp" href="http://127.0.0.1:5500/itens.html">Cardápio</a>
+                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/itens.html">Cardápio</a>
                     <a class="mnTp" href="#" onclick="abreCarrinho()">Carrinho</a>
                     
                 </ul>
