atualizacao de bugs
fechar menu quando abre sobre nos
carrinho de compra
margem servicos

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <span class="line"></span>
                 </div>
                 <ul id="menuTp">
-                    <a class="mnTp" href="#">Home</a>
+                    <a class="mnTp" href="http://127.0.0.1:5500/index.html">Home</a>
                     <a class="mnTp" onclick="sobreNos()" href="#sobreNos" target="_self" >Sobre nós</a>
-                    <a class="mnTp" href="https://tiagocperez.github.io/Haven-Burger/itens.html">Cardápio</a>
+                    <a class="mnTp" href="http://127.0.0.1:5500/itens.html">Cardápio</a>
                     <a class="mnTp" href="#" onclick="abreCarrinho()">Carrinho</a>
                     
                 </ul>
@@ -298,7 +298,7 @@
                                     <li class="carrocelItem ">
                                         <img src="imagens/delivery.png" alt="image.jpg">
                                         <div class="barraServico"></div>
-                                        <h2>Sabores no Conforto de Casa.</h2>
+                                        <h2>Saboreie em casa.</h2>
                                         <p>Experimente nossos deliciosos hambúrgueres sem sair de casa! Com nosso serviço de
                                             delivery rápido e confiável, levamos até você os sabores irresistíveis dos
                                             nossos hambúrgueres artesanais. Faça seu pedido e desfrute de uma refeição
