hiperlink botao "mais lanches"

--- a/index.html
+++ b/index.html
@@ -421,9 +421,11 @@
                                     sabor que você merece!</b>
                             </p>
                         </div>
-                        <button class="saibaMais">
-                            <p><b>Mais Lanches</b></p>
-                        </button>
+                        <a href="https://tiagocperez.github.io/Haven-Burger/itens.html">
+                            <button class="saibaMais">
+                                <p><b>Mais Lanches</b></p>
+                            </button>
+                        </a>
                 </section>
         </div>
     </main>
